// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. no child elements 1`] = `""`;

exports[`2. a single child element 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  padding-right: 10px;
}

.c0 .imageContainerClass {
  display: block;
}

.c0 .summaryHidden {
  display: none;
}

.c0 .summary125Class {
  display: block;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c1 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:768px) {
  .c3 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:768px) {
  .c0 .imageContainerClass {
    display: block;
  }

  .c0 .headlineClass {
    font-size: 25px;
    line-height: 28px;
    margin-top: 5px;
  }
}

@media (min-width:768px) {
  .c0 .imageContainerClass {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    margin-bottom: 0;
    min-width: auto;
    padding-right: 10px;
  }

  .c0 .contentContainerClass {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    min-width: 300px;
  }
}

@media (min-width:1024px) {
  .c0 .summary125Class {
    display: block;
  }

  .c0 .summary145Class {
    display: none;
  }
}

@media (min-width:768px) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

<config__Base>
  <div
    className="c0 config__Base-bs1997-0 config__Base-bs1997-1 config__Base-bs1997-2 c0 css-view-1dbjc4n"
  >
    <responsive__SliceContainer>
      <div
        className="c1 responsive__SliceContainer-sc-1kirgpc-0 c1 css-view-1dbjc4n"
      >
        <responsive__Base>
          <div
            className="c2 responsive__Base-sc-1lqbq6a-1 responsive__Base-sc-1lqbq6a-3 responsive__Base-sc-1lqbq6a-4 c2 css-view-1dbjc4n"
          >
            <responsive__ChildContainer>
              <div
                className="c3 responsive__ChildContainer-sc-1lqbq6a-0 c3 css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  standard-1
                </div>
              </div>
            </responsive__ChildContainer>
          </div>
        </responsive__Base>
      </div>
    </responsive__SliceContainer>
  </div>
</config__Base>
`;

exports[`3. two child elements 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  padding-right: 10px;
}

.c4 {
  border-bottom-color: #DBDBDB;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 10px;
  margin-top: 10px;
  min-width: auto;
}

.c0 .imageContainerClass {
  display: block;
}

.c0 .summaryHidden {
  display: none;
}

.c0 .summary125Class {
  display: block;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c1 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:768px) {
  .c3 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:768px) {
  .c4 {
    border-bottom: none;
    border-right-color: #DBDBDB;
    border-right-style: solid;
    border-right-width: 1px;
    -webkit-flex: 0 !important;
    -ms-flex: 0 !important;
    flex: 0 !important;
    margin: 0 10px;
  }
}

@media (min-width:768px) {
  .c0 .imageContainerClass {
    display: block;
  }

  .c0 .headlineClass {
    font-size: 25px;
    line-height: 28px;
    margin-top: 5px;
  }
}

@media (min-width:1024px) {
  .c0 .summary125Class {
    display: block;
  }

  .c0 .summary145Class {
    display: none;
  }
}

@media (min-width:768px) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

<config__Base>
  <div
    className="c0 config__Base-bs1997-0 config__Base-bs1997-2 c0 css-view-1dbjc4n"
  >
    <responsive__SliceContainer>
      <div
        className="c1 responsive__SliceContainer-sc-1kirgpc-0 c1 css-view-1dbjc4n"
      >
        <responsive__Base>
          <div
            className="c2 responsive__Base-sc-1lqbq6a-1 responsive__Base-sc-1lqbq6a-3 responsive__Base-sc-1lqbq6a-4 c2 css-view-1dbjc4n"
          >
            <responsive__ChildContainer>
              <div
                className="c3 responsive__ChildContainer-sc-1lqbq6a-0 c3 css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  standard-1
                </div>
              </div>
            </responsive__ChildContainer>
            <responsive>
              <div
                className="c4 responsive-sc-1kirgpc-1 c4 css-view-1dbjc4n"
              />
            </responsive>
            <responsive__ChildContainer>
              <div
                className="c3 responsive__ChildContainer-sc-1lqbq6a-0 c3 css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  standard-2
                </div>
              </div>
            </responsive__ChildContainer>
          </div>
        </responsive__Base>
      </div>
    </responsive__SliceContainer>
  </div>
</config__Base>
`;

exports[`4. three child elements 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  padding-right: 10px;
}

.c4 {
  border-bottom-color: #DBDBDB;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 10px;
  margin-top: 10px;
  min-width: auto;
}

.c0 .imageContainerClass {
  display: none;
}

.c0 .summaryHidden {
  display: none;
}

.c0 .summary125Class {
  display: block;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c1 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:768px) {
  .c3 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:768px) {
  .c4 {
    border-bottom: none;
    border-right-color: #DBDBDB;
    border-right-style: solid;
    border-right-width: 1px;
    -webkit-flex: 0 !important;
    -ms-flex: 0 !important;
    flex: 0 !important;
    margin: 0 10px;
  }
}

@media (min-width:768px) {
  .c0 .imageContainerClass {
    display: block;
  }

  .c0 .headlineClass {
    font-size: 25px;
    line-height: 28px;
    margin-top: 5px;
  }
}

@media (min-width:1024px) {
  .c0 .summary125Class {
    display: none;
  }

  .c0 .summary145Class {
    display: block;
  }
}

@media (min-width:768px) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-left: 20px;
    padding-right: 20px;
    width: 100%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 100%;
  }
}

<config__Base>
  <div
    className="c0 config__Base-bs1997-0 config__Base-bs1997-2 c0 css-view-1dbjc4n"
  >
    <responsive__SliceContainer>
      <div
        className="c1 responsive__SliceContainer-sc-1kirgpc-0 c1 css-view-1dbjc4n"
      >
        <responsive__Base>
          <div
            className="c2 responsive__Base-sc-1lqbq6a-1 responsive__Base-sc-1lqbq6a-2 responsive__Base-sc-1lqbq6a-4 c2 css-view-1dbjc4n"
          >
            <responsive__ChildContainer>
              <div
                className="c3 responsive__ChildContainer-sc-1lqbq6a-0 c3 css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  standard-1
                </div>
              </div>
            </responsive__ChildContainer>
            <responsive>
              <div
                className="c4 responsive-sc-1kirgpc-1 c4 css-view-1dbjc4n"
              />
            </responsive>
            <responsive__ChildContainer>
              <div
                className="c3 responsive__ChildContainer-sc-1lqbq6a-0 c3 css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  standard-2
                </div>
              </div>
            </responsive__ChildContainer>
            <responsive>
              <div
                className="c4 responsive-sc-1kirgpc-1 c4 css-view-1dbjc4n"
              />
            </responsive>
            <responsive__ChildContainer>
              <div
                className="c3 responsive__ChildContainer-sc-1lqbq6a-0 c3 css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  standard-3
                </div>
              </div>
            </responsive__ChildContainer>
          </div>
        </responsive__Base>
      </div>
    </responsive__SliceContainer>
  </div>
</config__Base>
`;
